data/derived/comb/progs/unify/prog1724.ml.out
Characters 143-162:
  let () = Printf.printf "%d"; in
           ^^^^^^^^^^^^^^^^^^^
Error: This expression has type int -> unit
       but an expression was expected of type unit
